# BGsystem3-timer

./: .eslintrc.cjs  .gitignore  README.md  index.html  package.json  vite.config.ts
src/: App.vue  TimerView.vue  styles.css  utils.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/components/: CardContainer.vue  TimerButton.vue  TimerSelector.vue
src/components/startPage/: SectorComponent.vue  StartPage.vue
