[package]
name = "better-timer"
version = "3.0.171"
description = "BGsystem3 考试倒计时"
authors = [ "you" ]
edition = "2021"

[build-dependencies.tauri-build]
version = "1"
features = [ ]

[dependencies]
serde_json = "1"

  [dependencies.tauri]
  version = "1"
  features = [ "shell-open", "window-all" ]

  [dependencies.serde]
  version = "1"
  features = [ "derive" ]

[features]
custom-protocol = [ "tauri/custom-protocol" ]
